# Financial_Assistant

./: .clineignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/core/: generate.py  handlers.py  pandas_parses.py
app/data/: models.py  request.py
app/tools/: prompt.py  utils.py
